# mad

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
examples/: CMakeLists.txt  glfw_example.cpp
src/: gl.cppm  gm.cppm  gn.cppm
tools/: fetch_registry.sh  generate.py  generate_gl.py  generate_gm.py  generate_gn.py  glxml_parser.py  module_spec.py
